Kubernetes/examples/pv-pvc.yaml
# Pod using the PVC
apiVersion: v1
kind: Pod
metadata:
  name: storage-pod
spec:
  volumes:
    - name: app-storage
      persistentVolumeClaim:
        claimName: app-pvc
  containers:
    - name: app
      image: nginx:1.25
      volumeMounts:
        - name: app-storage
          mountPath: /usr/share/nginx/html
